// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<TitleBanner /> should "render" meta 1`] = `
.c5 {
  display: flex;
  flex-direction: column;
}

.c8 {
  display: flex;
  position: relative;
}

.c3 {
  background-color: rgb(255, 255, 255);
  padding-bottom: 1rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 1rem;
}

.c4 {
  font-size: 3rem;
  line-height: 1;
  font-family: "Krana Fat",Trebuchet MS;
}

.c6 {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.c1 {
  background-color: rgb(255, 255, 255);
}

.c0 {
  background-color: rgb(0, 98, 114);
  grid-column: 1/-1;
  padding-top: 3.75rem;
}

@media (min-width: 1200px) {
  .c3 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 37.5rem;
    padding-bottom: 0;
    padding-left: 0.5rem;
    padding-right: 5rem;
    padding-top: 0;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 5rem;
    line-height: 1;
  }
}

@media (min-width: 1200px) {
  .c6 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 1200px) {
  .c1 {
    display: flex;
    flex-direction: row;
    height: 100%;
    justify-content: flex-end;
    margin: auto;
  }

  .c1 >.c7,
  .c1 >.c2 {
    width: 50%;
  }
}

@media (min-width: 1200px) {
  .c0 {
    height: 45rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      <h1
        class="c4"
      >
        Banner title
      </h1>
      <aside
        aria-label="Kirjoituksen Banner title meta-tiedot"
        class="c5 c6"
      >
        <time
          datetime="undefined-undefined-"
        />
      </aside>
    </div>
    <div
      class="c7 c8"
    />
  </div>
</div>
`;

exports[`<TitleBanner /> should render 1`] = `
.c9 {
  text-decoration: none;
  transition-duration: 150ms;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  color: rgb(90, 94, 0);
}

.c9 :hover,
.c9 :active,
.c9 :focus {
  text-decoration: underline;
}

.c7 {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-top: 0.5rem;
}

.c8 {
  margin-right: 1rem;
}

.c8 :last-child {
  margin-right: 0px;
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c14 {
  margin-top: auto;
}

.c11 {
  display: flex;
  position: relative;
}

.c12 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.c13 {
  height: 100%;
  width: 100%;
}

.c13:after {
  background-image: linear-gradient(rgba(0, 98, 114, 0.7), rgba(0, 98, 114, 0.7));
  bottom: 0;
  content: "";
  height: 100%;
  position: absolute;
  top: 0;
  width: 100%;
}

.c3 {
  background-color: rgb(255, 255, 255);
  padding-bottom: 1rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 1rem;
}

.c4 {
  font-size: 3rem;
  line-height: 1;
  font-family: "Krana Fat",Trebuchet MS;
}

.c6 {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

.c1 {
  background-color: rgb(255, 255, 255);
}

.c0 {
  background-color: rgb(0, 98, 114);
  grid-column: 1/-1;
  padding-top: 3.75rem;
}

@media (min-width: 1200px) {
  .c3 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 37.5rem;
    padding-bottom: 0;
    padding-left: 0.5rem;
    padding-right: 5rem;
    padding-top: 0;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 5rem;
    line-height: 1;
  }
}

@media (min-width: 1200px) {
  .c6 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 1200px) {
  .c1 {
    display: flex;
    flex-direction: row;
    height: 100%;
    justify-content: flex-end;
    margin: auto;
  }

  .c1 >.c10,
  .c1 >.c2 {
    width: 50%;
  }
}

@media (min-width: 1200px) {
  .c0 {
    height: 45rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      <h1
        class="c4"
      >
        Banner title
      </h1>
      <aside
        aria-label="Kirjoituksen Banner title meta-tiedot"
        class="c5 c6"
      >
        <time
          datetime="2024-10-4"
        >
          4.10.2024
        </time>
        <ul
          class="c7"
        >
          <li
            class="c8"
          >
            <a
              class="c9"
              href="/kategoria/kirkkonummi/"
            >
              #
              Kirkkonummi
            </a>
          </li>
          <li
            class="c8"
          >
            <a
              class="c9"
              href="/kategoria/kuntavaalit/"
            >
              #
              kuntavaalit
            </a>
          </li>
        </ul>
      </aside>
    </div>
    <div
      class="c10 c11"
    >
      <div
        class="c12"
      >
        <div
          class="gatsby-image-wrapper gatsby-image-wrapper-constrained c13"
          data-gatsby-image-wrapper=""
          style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
        >
          <div
            style="max-width: 4032px; display: block;"
          >
            <img
              alt=""
              aria-hidden="true"
              role="presentation"
              src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='1728'%20width='4032'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
              style="max-width: 100%; display: block; position: static;"
            />
          </div>
          <img
            alt=""
            aria-hidden="true"
            data-placeholder-image=""
            decoding="async"
            src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQEBLAEsAAD/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wAARCAAJABQDAREAAhEBAxEB/8QAFQABAQAAAAAAAAAAAAAAAAAABQT/xAAiEAACAQIGAwEAAAAAAAAAAAABAhEAAwQFEhMxcTI1QXL/xAAYAQEAAwEAAAAAAAAAAAAAAAADAAIEAf/EABsRAQACAwEBAAAAAAAAAAAAAAABAgMRMSES/9oADAMBAAIRAxEAPwA6zlpYFt6BMERxQ7X+TOZ4BsFhVu7qvpUK2lYHdTLTUbHb3kASzIYVWjn6aBWfV9vxPVLLQQz71dj8iu5OQO/Atrg91msN/9k="
            style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
          />
          <picture>
            <source
              sizes="(min-width: 4032px) 4032px, 100vw"
              srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&q=50&fm=webp 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&q=50&fm=webp 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&q=50&fm=webp 4000w"
              type="image/webp"
            />
            <img
              alt=""
              data-gatsby-image-ssr=""
              data-main-image=""
              decoding="async"
              loading="eager"
              sizes="(min-width: 4032px) 4032px, 100vw"
              src="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg"
              srcset="https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=1008&h=432&fl=progressive&q=50&fm=jpg 1008w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=2016&h=864&fl=progressive&q=50&fm=jpg 2016w,https://images.ctfassets.net/44t6u1r4zgqq/5aPvGwEnquvx8jkXJmkYE5/25e52ab22adc2730dce65ab3686cf060/Lauri-Lavanti-21-9.jpg?w=4000&h=1714&fl=progressive&q=50&fm=jpg 4000w"
              style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; opacity: 0;"
            />
          </picture>
          <noscript />
          <script
            type="module"
          >
            const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
          </script>
        </div>
      </div>
      <div
        class="gatsby-image-wrapper gatsby-image-wrapper-constrained c14"
        data-gatsby-image-wrapper=""
        style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
      >
        <div
          style="max-width: 600px; display: block;"
        >
          <img
            alt=""
            aria-hidden="true"
            role="presentation"
            src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='400'%20width='600'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
            style="max-width: 100%; display: block; position: static;"
          />
        </div>
        <div
          aria-hidden="true"
          data-placeholder-image=""
          style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
        />
        <picture>
          <source
            sizes="(min-width: 600px) 600px, 100vw"
            srcset="/static/6e2d9e3635750bc519675010efe8d804/7e42a/Lauri_Lavanti_-_hymyillen_nojaten.avif 150w,/static/6e2d9e3635750bc519675010efe8d804/6e445/Lauri_Lavanti_-_hymyillen_nojaten.avif 300w,/static/6e2d9e3635750bc519675010efe8d804/6175a/Lauri_Lavanti_-_hymyillen_nojaten.avif 600w,/static/6e2d9e3635750bc519675010efe8d804/b9d9f/Lauri_Lavanti_-_hymyillen_nojaten.avif 1200w"
            type="image/avif"
          />
          <source
            sizes="(min-width: 600px) 600px, 100vw"
            srcset="/static/6e2d9e3635750bc519675010efe8d804/00a0c/Lauri_Lavanti_-_hymyillen_nojaten.webp 150w,/static/6e2d9e3635750bc519675010efe8d804/3c8b5/Lauri_Lavanti_-_hymyillen_nojaten.webp 300w,/static/6e2d9e3635750bc519675010efe8d804/e5002/Lauri_Lavanti_-_hymyillen_nojaten.webp 600w,/static/6e2d9e3635750bc519675010efe8d804/6c281/Lauri_Lavanti_-_hymyillen_nojaten.webp 1200w"
            type="image/webp"
          />
          <img
            alt="Kuva Lauri Lavannista hymyilemässä, katsoen oikealle, samalla kun hän nojaa pöytään ja käsiinsä"
            data-gatsby-image-ssr=""
            data-main-image=""
            decoding="async"
            loading="eager"
            sizes="(min-width: 600px) 600px, 100vw"
            src="/static/6e2d9e3635750bc519675010efe8d804/49d07/Lauri_Lavanti_-_hymyillen_nojaten.jpg"
            srcset="/static/6e2d9e3635750bc519675010efe8d804/457e3/Lauri_Lavanti_-_hymyillen_nojaten.jpg 150w,/static/6e2d9e3635750bc519675010efe8d804/b6e33/Lauri_Lavanti_-_hymyillen_nojaten.jpg 300w,/static/6e2d9e3635750bc519675010efe8d804/49d07/Lauri_Lavanti_-_hymyillen_nojaten.jpg 600w,/static/6e2d9e3635750bc519675010efe8d804/a12ee/Lauri_Lavanti_-_hymyillen_nojaten.jpg 1200w"
            style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: contain; opacity: 0;"
          />
        </picture>
        <noscript />
        <script
          type="module"
        >
          const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
        </script>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TitleBanner /> should render minimal 1`] = `
.c6 {
  display: flex;
  position: relative;
}

.c3 {
  background-color: rgb(255, 255, 255);
  padding-bottom: 1rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 1rem;
}

.c4 {
  font-size: 3rem;
  line-height: 1;
  font-family: "Krana Fat",Trebuchet MS;
}

.c1 {
  background-color: rgb(255, 255, 255);
}

.c0 {
  background-color: rgb(0, 98, 114);
  grid-column: 1/-1;
  padding-top: 3.75rem;
}

@media (min-width: 1200px) {
  .c3 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: 37.5rem;
    padding-bottom: 0;
    padding-left: 0.5rem;
    padding-right: 5rem;
    padding-top: 0;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 5rem;
    line-height: 1;
  }
}

@media (min-width: 1200px) {
  .c1 {
    display: flex;
    flex-direction: row;
    height: 100%;
    justify-content: flex-end;
    margin: auto;
  }

  .c1 >.c5,
  .c1 >.c2 {
    width: 50%;
  }
}

@media (min-width: 1200px) {
  .c0 {
    height: 45rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      <h1
        class="c4"
      >
        Banner title
      </h1>
    </div>
    <div
      class="c5 c6"
    />
  </div>
</div>
`;
